# pygame_easy_menu

./: .gitignore  License.txt  README.md  Setup.py  pyproject.toml
.github/workflows/: test.yml
pygame_Menu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pygame_easy_menu/: __init__.py  backends.py  main.py  pygame_easy_menu.py  tools.py
pygame_easy_menu.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_backends.py
